# mays-forge-os

./: .gitignore  .pre-commit-config.yaml  README.md  render.yaml
backend/: .env.example  Makefile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  files.py  health.py  me.py  organizations.py  router.py
backend/app/core/: exceptions.py  logging.py  middleware.py  security.py
backend/app/db/: client.py  files.py  organizations.py
backend/app/models/: file.py  organization.py
backend/app/services/: ai_analyzer.py  csv_parser.py  file_validation.py  pdf_parser.py  report_generator.py  storage.py  stuck_files.py
backend/app/services/prompts/: blueprint_v1.py  csv_analysis_v1.py  image_analysis_v1.py  pdf_analysis_v1.py
backend/tests/: conftest.py  test_auth.py  test_csv_analysis.py  test_files.py  test_health.py  test_organizations.py
docs/: RLS_VERIFICATION.md  ROADMAP.md
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/lib/: api.ts
supabase/: config.toml
supabase/migrations/: 20260420231419_init_orgs_and_memberships.sql  20260421031630_init_files.sql  20260421032735_init_storage_policies.sql  20260512203911_grant_table_privileges.sql  20260512212423_fix_org_select_policy.sql  20260606120000_add_pdf_to_file_kind.sql
